make-a-wish-salesforce/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>About_Me__c</fullName>
        <description>It will holds the details about the volunteer contact itself</description>
        <label>About Me</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Email__c</fullName>
        <description>It will be used as a hidden field to store contact&apos;s account email</description>
        <formula>Account.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <description>It will be used as a hidden filed to store the contact&apos;s account phone</description>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <description>The date the volunteer contact record was activated and reactivated (if applicable).</description>
        <label>Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Active_Board_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Organizational Affiliation = Active, Conflict of interest = Not Expired, BGC = Not Expired, Volunteer Role Only Board Member = Trained</description>
        <label>Active Board Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Non_Wish_Granter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Organization Affiliation=Active, Conflict of Interest=Not Expired, ((Volunteer Role (excluding anyone with a role of Board Member, Wish Granter, Wish Granter Mentor) = Trained without requirement of BGC) OR (Volunteer Role (excluding anyone with a role of Board Member, Wish Granter, Wish Granter Mentor) = Trained with BGC = Not Expired for required roles))</description>
        <label>Active Non-Wish Granter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Single_Day_Event_Volunteer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Organization Affiliation=Active, Volunteer Role=Single Day Event Volunteer, Last Completed Opportunity=Last 365 days</description>
        <label>Active Single Day Event Volunteer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Wish_Granter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Organization Affiliation=Active, Conflict of Interest=Not Expired, BGC=Not Expired, (Volunteer Role of Wish Granter=Trained or Volunteer Role of Wish Granter Mentor=Trained)</description>
        <label>Active Wish Granter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actor_Actress__c</fullName>
        <description>It will capture the Wish Child&apos;s favorite Actor/Actress details</description>
        <label>Actor/Actress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Latitude__c</fullName>
        <formula>MailingLatitude</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Latitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address_Longitude__c</fullName>
        <formula>MailingLongitude</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Longitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adult_Emergency_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will define that this contact is Adult&apos;s emergency contact or not.</description>
        <label>Is Adult Emergency Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Already_wish_granted_by_MAW_Other_Org__c</fullName>
        <description>Prior Wish Granted details</description>
        <label>Already Wish Granted By MAW/Other Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_Phone_Type__c</fullName>
        <description>This field is used to store the type of alternate phone.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <description>It store the alternate phone number.</description>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Auto_Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates whether or not the lead was qualified automatically or as a result of a manual review.</description>
        <label>Auto Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B_C_Expiration_Date__c</fullName>
        <description>It holds the Background check expiration date</description>
        <label>B/C Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BackGroundCheckUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to confirm to update the following fields email, Phone when background check record got expired</description>
        <label>BackGroundCheckUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Birth_Day__c</fullName>
        <description>It will hold the day value of the Birth day</description>
        <label>Birth Day</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Birth_Month__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birth_Month__c</fullName>
        <description>It will hold the month value of the DOB</description>
        <label>Birth Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birth_Year__c</fullName>
        <description>It will capture the volunteer birth year value</description>
        <label>Birth Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Board_Agreement_Signed__c</fullName>
        <label>Board Agreement Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Board_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will used to identify the Board Member</description>
        <label>Board Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Board_Term_End_Date__c</fullName>
        <description>it holds the details of the Board Term End Date</description>
        <label>Board Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Board_Term_Start_Date__c</fullName>
        <description>It holds the details of Board Term Start Date</description>
        <label>Board Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Book_Story__c</fullName>
        <description>It will capture the wish child favorites book story details</description>
        <label>Book/Story</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broadcast_Number__c</fullName>
        <description>It is a hidden field , used to find the volunteer is read the broadcast message or not.</description>
        <label>Hidden Broadcast Number</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COI_Expiration_Date__c</fullName>
        <description>It holds the Expiration Date of COI</description>
        <label>COI Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cake_Candy__c</fullName>
        <description>It will capture the wish child favorite Cake/Candy details</description>
        <label>Cake/Candy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Employer__c</fullName>
        <description>It will hold the city value of the employer</description>
        <label>City</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_in_School__c</fullName>
        <description>It will capture the wish child class details</description>
        <label>Class In School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <description>It will capture the wish child favorite colors</description>
        <label>Color</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication__c</fullName>
        <description>It will hold which type of communication can understand by child and this field mapped from lead at the time of lead conversion.</description>
        <label>Communication</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>This child is non-verbal</fullName>
                </value>
                <value>
                    <fullName>This child is developmentally on target for chronological age</fullName>
                </value>
                <value>
                    <fullName>This child functions at a 0-2 year old, Sensorimotor stage</fullName>
                </value>
                <value>
                    <fullName>This child functions at a 2-7 year old, Preoperational stage</fullName>
                </value>
                <value>
                    <fullName>This child functions at a 7-11 year old, Concrete Operational stage</fullName>
                </value>
                <value>
                    <fullName>This child functions at an 11+ year old, Formal Operational stage</fullName>
                </value>
                <value>
                    <fullName>I am not sure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Account_Name__c</fullName>
        <description>It will be used as a hidden field to store the contact&apos;s account name</description>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>It will store the value of County.</description>
        <label>County</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentAge__c</fullName>
        <formula>IF(Current_Age__c == 18 &amp;&amp; ((RecordType.Name == &apos;Wish Child&apos; &amp;&amp; Signature_Obtained_wish_Child__c == False)||(RecordType.Name == &apos;Wish Family&apos; &amp;&amp; Signature_Obtained_wish_Family__c == False)) ,TEXT(Current_Age__c)+IMAGE(&quot;/resource/1521043629000/Red_Indicator&quot;, &quot;red&quot;, 15, 15), TEXT(Current_Age__c))</formula>
        <inlineHelpText>A &quot;!&quot; indicator will appear if (this wish participant / the wish child) turns 18--additional signatures may be needed. Check the &quot;Signature obtained&quot; box on the contact record to turn this indicator off.</inlineHelpText>
        <label>Current Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Age__c</fullName>
        <description>This field is to calculate the age of the wish child based on the DOB</description>
        <formula>IF(AND(NOT(ISBLANK(Birthdate)),npsp__Deceased__c = false) , 
IF(DATE(2000 , MONTH( Birthdate ) , DAY( Birthdate ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ), 
YEAR (Today()) - YEAR ( Birthdate ), 
YEAR (Today()) - YEAR ( Birthdate ) -1 ), 
null)</formula>
        <label>Current Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Conditions__c</fullName>
        <description>Used to hold current conditions</description>
        <label>Current Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Wish_Assigned__c</fullName>
        <description>Used to get the date of the wish that assigned to the volunteer</description>
        <label>Date Of Wish Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_last_engagement__c</fullName>
        <description>It capture the volunteer last engagement  date.</description>
        <label>Date Of Last Engagement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deceased_Date__c</fullName>
        <description>It capture the Deceased date.</description>
        <label>Deceased Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Medical Professional&apos;s department in medical facility</description>
        <label>Department</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Given_By_Referrer__c</fullName>
        <description>Used to hold the diagnosis given by referrer</description>
        <label>Diagnosis Given By Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diagnosis__c</fullName>
        <description>It will have Wish Child&apos;s Medical Condition details</description>
        <label>Primary Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact_Notes__c</fullName>
        <description>It will capture the detail information about the contact notes</description>
        <label>Do Not Contact Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Create_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked, then we should not create volunteer for this contact.</description>
        <label>Do Not Create User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Driver_Type__c</fullName>
        <description>It will hold the value of Driver type(Potential/Preferred)</description>
        <label>Driver Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>Potential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Electronics_Games_that_I_like_to_play__c</fullName>
        <description>It will capture the details,Wish Child likes to play with Electronics/Games.</description>
        <label>Electronics/Games That I Like To Play</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <description>It will hold the emergency contact number.</description>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Relationship__c</fullName>
        <description>Relationship values for volunteer emergency contacts.</description>
        <label>Emergency Contact Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Neighbor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emergency_Contact__c</fullName>
        <description>It will hold the value of emergency contact information.</description>
        <label>Emergency Contact</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <description>It will hold the information about the employer.</description>
        <label>Employer</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>It holds the License Expiration Date details.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>It holds the id value of External System.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FirstNameCharacterCount__c</fullName>
        <description>This field is used to get the number of character of the first name of the contact</description>
        <formula>LEN( FirstName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name Character Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Last_Initial__c</fullName>
        <description>It will probably have multiple uses, including emailing sensitive medical information without using full name (medical advisory review for non migrated chapters) as well as display of available wish volunteer opportunities.</description>
        <formula>FirstName+&apos; &apos;+LEFT(LastName,1)</formula>
        <label>First + Last Initial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Recipient_Name__c</fullName>
        <description>This field will capture the mane of the 1st recipient</description>
        <label>Hidden First Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Food__c</fullName>
        <description>it will capture wish child favorite food details</description>
        <label>Food</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Mulesoft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It indicated the record is created by manually or from mulesoft.</description>
        <label>From Mulesoft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Game__c</fullName>
        <description>It will capture the wish child favorite game details</description>
        <label>Game</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>It will hold the gender information.</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Self-describe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Granted_Age__c</fullName>
        <formula>IF( NOT(ISBLANK(Birthdate)) , 
IF(DATE(2000 , MONTH( Birthdate) , DAY( Birthdate) ) &lt;= DATE( 2000 , MONTH(Hidden_Granted_Date__c) , DAY(Hidden_Granted_Date__c) ), 
YEAR (Hidden_Granted_Date__c) - YEAR (Birthdate), 
YEAR (Hidden_Granted_Date__c) - YEAR (Birthdate) -1 ), 
null)</formula>
        <label>Granted Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HiddenBirthDate__c</fullName>
        <description>This field is used for docusign purpose.</description>
        <formula>If(NOT(ISBLANK(Birthdate)), text(MONTH(Birthdate)) +&apos;/&apos;+ text(DAY(Birthdate)) +&apos;/&apos;+ text(YEAR(Birthdate)),Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden BirthDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HiddenMobilePhone__c</fullName>
        <description>This field is used to store the updated mobile phone value from Updated contact info page.</description>
        <label>Hidden Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HiddenOtherPhone__c</fullName>
        <description>This field is used to store the updated other phone value from Updated contact info page.</description>
        <label>Hidden Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hidden_Contact_Full_Name__c</fullName>
        <formula>UPPER(FirstName+&apos; &apos;+LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Country__c</fullName>
        <description>This field is used as hidden to update the contact country  from volunteer portal</description>
        <label>Hidden Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Current_Pref_Con_Rel_Id__c</fullName>
        <label>Hidden Current Pref Con Rel Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Email__c</fullName>
        <description>This field is used as hidden to update the contact email from volunteer portal</description>
        <label>Hidden Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hidden_First_Name__c</fullName>
        <description>This field is used as hidden to update the contact first name from volunteer portal</description>
        <label>Hidden First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Granted_Date__c</fullName>
        <label>Hidden Granted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hidden_Hospital_Account__c</fullName>
        <description>This field is used to store the hospital account id during the lead conversion.</description>
        <label>Hidden Hospital Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Is_We_Need_To_Expedite_The_Proces__c</fullName>
        <description>This field is used to send the email to the wish child owner based on the value.</description>
        <label>Hidden Is We Need To Expedite The Proces</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hidden_Last_Name__c</fullName>
        <description>This field is used as hidden to update the contact last name from volunteer portal</description>
        <label>Hidden Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Medical_Physician_Email__c</fullName>
        <description>This field is used to store the medical professional email address for docusign purpose.</description>
        <label>Wish Clearance Medical Physician Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hidden_Medical_Physician__c</fullName>
        <description>This field is used to store the treating medical professional name for docusign purpose.</description>
        <label>Wish Clearance Medical Physician</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Minor_Participant__c</fullName>
        <description>This hidden field is used to store the minor participant name and email value from WishLiabilityMinorParticipant_VF page.</description>
        <label>Hidden Minor Participant</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hidden_Phone__c</fullName>
        <description>This field is used as hidden to update the contact phone from volunteer portal</description>
        <label>Hidden Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hidden_Preferred_Contact_Rel_Id__c</fullName>
        <description>This field is used to hold the relationship record id for preferred contact chooses from the Update Contact Info.</description>
        <label>Hidden Preferred Contact Rel Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Preferred_Phone_Types__c</fullName>
        <label>Hidden Preferred Phone Types</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Same_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used in update contact info</description>
        <label>Hidden Same Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_State__c</fullName>
        <description>Hidden State Value</description>
        <label>Hidden State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Status__c</fullName>
        <description>It store the Affiliation Object  Status field value</description>
        <label>Hidden Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Prospective</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hidden_Street__c</fullName>
        <description>This field is used as hidden to update the contact Street from volunteer portal</description>
        <label>Hidden Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Third_Recipient_Email__c</fullName>
        <label>Hidden Third Recipient Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Third_Recipient_Name__c</fullName>
        <description>This field is used to store the wish receipt recipient value.</description>
        <label>Hidden Third Recipient Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Use_as_Household_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for update voulunteer contact address from the community.</description>
        <label>Hidden Use as Household Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_Volunteer_OT_Status__c</fullName>
        <label>Hidden Volunteer OT Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Orientation With Completed</fullName>
                </value>
                <value>
                    <fullName>Orientation Without Completed</fullName>
                </value>
                <value>
                    <fullName>Role Specific Training Available</fullName>
                </value>
                <value>
                    <fullName>Training Registered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hidden_Wish_Child_Id__c</fullName>
        <description>This field holds Id of Wish child Id.</description>
        <label>Hidden Wish Child Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Work_Phone__c</fullName>
        <description>This field is used by Update Contact Info Page.</description>
        <label>Hidden Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hidden_Zip_Code__c</fullName>
        <description>This field is used as hidden to update the contact Zip Code from volunteer portal</description>
        <label>Hidden Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_city__c</fullName>
        <description>This field is used as hidden to update the contact city from volunteer portal</description>
        <label>Hidden City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>